# qasem_parser

./: .gitignore  LICENSE  README.md  loc_unfaith.py  pyproject.toml  requirements.txt  run.py  run_pipeline.py  run_pipeline_cliff.py
examples/: run.py
qasem_parser/: __init__.py  argument_detection.py  common_defs.py  ling_utils.py  predicate_detection.py  qasem_parsing.py  torch_utils.py
